--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             color: #f39c12;
         }
     </style>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="76431df1-636d-4942-84ab-aa463a1b1b40"></script>
 </head>
 <body>
     <h1>Solve This To Know 🐍</h1>
