--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <body>
     <h1>Solve This To Know 🐍</h1>
     <p>allowed numbers -> 1-69</p>
+    <p> <i>am a two-digit number. The digit in my tens place is one more than twice the digit in my units place. If you reverse my digits and subtract the reversed number from me, the result is equal to three times the sum of my digits</i></p>
     <div class="grid">
         <input type="number" maxlength="1">
         <input type="number" maxlength="1">
